--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -17,6 +17,10 @@ SUPABASE_AUTH_EXTERNAL_GITHUB_SECRET="github-secret"
 SUPABASE_AUTH_EXTERNAL_GITHUB_CLIENT_ID="github-client"
 
 # Google OAuth
-# Google OAuth
 SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID="google-client"
 SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET="google-secret"
+
+# API Games
+API_GAMES_MERCHANT="merchant"
+API_GAMES_SECRET="secret"
+API_GAMES_SIGNATURE="signature"
