fix(style): eslint prettier formatting

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,6 +5,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
