--- a/apps/server/supabase/config.toml
+++ b/apps/server/supabase/config.toml
@@ -94,23 +94,23 @@ enable_confirmations = false
 # subject = "You have been invited"
 # content_path = "./supabase/templates/invite.html"
 
-[auth.sms]
+#[auth.sms]
 # Allow/disallow new user signups via SMS to your project.
-enable_signup = false
+#enable_signup = false
 # If enabled, users need to confirm their phone number before signing in.
-enable_confirmations = false
+#enable_confirmations = false
 
 # Use pre-defined map of phone number to OTP for testing.
-[auth.sms.test_otp]
+#[auth.sms.test_otp]
 # 4152127777 = "123456"
 
 # Configure one of the supported SMS providers: `twilio`, `twilio_verify`, `messagebird`, `textlocal`, `vonage`.
-[auth.sms.twilio]
-enabled = false
-account_sid = ""
-message_service_sid = ""
+#[auth.sms.twilio]
+#enabled = false
+#account_sid = ""
+#message_service_sid = ""
 # DO NOT commit your Twilio auth token to git. Use environment variable substitution instead:
-auth_token = "env(SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN)"
+#auth_token = "env(SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN)"
 
 # Use an external OAuth provider. The full list of providers are: `apple`, `azure`, `bitbucket`,
 # `discord`, `facebook`, `github`, `gitlab`, `google`, `keycloak`, `linkedin`, `notion`, `twitch`,
@@ -126,20 +126,20 @@ redirect_uri = ""
 # or any other third-party OIDC providers.
 url = ""
 
-[auth.external.google]
-enabled = true
-client_id = "env(SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID)"
+#[auth.external.google]
+#enabled = false
+#client_id = "env(SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID)"
 # DO NOT commit your OAuth provider secret to git. Use environment variable substitution instead:
-secret = "env(SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET)"
+#secret = "env(SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET)"
 # Overrides the default auth redirectUrl.
-redirect_uri = ""
+#redirect_uri = ""
 # Overrides the default auth provider URL. Used to support self-hosted gitlab, single-tenant Azure,
 # or any other third-party OIDC providers.
-url = ""
+#url = ""
 
-[analytics]
-enabled = true
-port = 54327
-vector_port = 54328
+#[analytics]
+#enabled = true
+#port = 54327
+#vector_port = 54328
 # Configure one of the supported backends: `postgres`, `bigquery`.
-backend = "postgres"
+#backend = "postgres"
