feat(profile): profile page and edit profile (#3)

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -5,10 +5,10 @@
     "jsx": "preserve",
     "esModuleInterop": true,
     "declaration": true,
-    "paths": {
-      "~/*": ["./src/*"]
-    },
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
+    "composite": true
   },
   "exclude": ["node_modules", "dist/"]
 }
