test: setup testing environment

--- a/packages/db/.env.test
+++ b/packages/db/.env.test
@@ -1,2 +1,2 @@
 # Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:54322/test"
+DATABASE_URL="postgresql://user:password@localhost:54322/mabar-fun-test"
