--- a/apps/server/.env.test
+++ b/apps/server/.env.test
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/v6-academy-db-test"
+DATABASE_URL="postgresql://user:password@localhost:54322/mabar-fun-test"
 
 # JWT
 JWT_SECRET="jwt-secret"
