feat(profile): add mlbb account checker

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -24,3 +24,4 @@ SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET="google-secret"
 API_GAMES_MERCHANT="merchant"
 API_GAMES_SECRET="secret"
 API_GAMES_SIGNATURE="signature"
+API_GAMES_BASE_URL="https://v1.apigames.id"
