--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,6 +22,7 @@
     "pretest": "dotenv -e .env.test -- npx prisma migrate reset --force"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.2.6",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
