fix: add test env

--- a/apps/server/.env.test
+++ b/apps/server/.env.test
@@ -20,3 +20,9 @@ SUPABASE_AUTH_EXTERNAL_GITHUB_CLIENT_ID="github-client"
 # Google OAuth
 SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID="google-client"
 SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET="google-secret"
+
+# API Games
+API_GAMES_MERCHANT="merchant"
+API_GAMES_SECRET="secret"
+API_GAMES_SIGNATURE="signature"
+API_GAMES_BASE_URL="https://v1.apigames.id"
