chore: move supabase config to db package

--- a/packages/db/.env.template
+++ b/packages/db/.env.template
@@ -1,2 +1,15 @@
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:54322/postgres"
+
+# Supabase
+SUPABASE_URL="http://localhost:54321"
+SUPABASE_KEY="supabase-key"
+SUPABASE_JWT_SECRET="super-secret-jwt-token-with-at-least-32-characters-long"
+
+# Github OAuth
+SUPABASE_AUTH_EXTERNAL_GITHUB_SECRET="secret"
+SUPABASE_AUTH_EXTERNAL_GITHUB_CLIENT_ID="client"
+
+# Google OAuth
+SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID="client"
+SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET="secret"
