--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -17,5 +17,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true
-  }
+  },
+  "exclude": ["/supabase"]
 }
