--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
+    "vaul": "^0.7.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
