--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,11 +15,13 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:ci": "eslint \"{src,apps,libs,test}/**/*.ts\" --max-warnings 0",
     "test": "dotenv -e .env.test -- jest",
+    "test:local": "pnpm pretest:local && dotenv -e .env.test.local -- jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "pretest": "dotenv -e .env.test -- npx prisma migrate reset --force"
+    "pretest": "dotenv -e .env.test -- npx prisma migrate reset --force",
+    "pretest:local": "dotenv -e .env.test.local -- npx prisma migrate reset --force"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
@@ -34,9 +36,11 @@
     "@v6/db": "workspace:*",
     "@v6/dto": "workspace:*",
     "bcrypt": "^5.1.1",
+    "date-fns": "^2.30.0",
     "dotenv-flow": "^3.2.0",
     "env-var": "^7.4.0",
     "helmet": "^7.0.0",
+    "mockdate": "^3.0.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
