--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
@@ -35,6 +36,7 @@
     "@v6/api": "workspace:*",
     "@v6/db": "workspace:*",
     "@v6/dto": "workspace:*",
+    "@v6/supabase": "workspace:^",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
@@ -54,6 +56,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
+    "vaul": "^0.7.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
