--- a/packages/dto/package.json
+++ b/packages/dto/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@v6/db": "workspace:^",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0"
+    "class-validator": "^0.14.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "typescript": "5.1.3"
