--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -18,5 +18,5 @@
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true
   },
-  "exclude": ["/supabase"]
+  "exclude": ["/supabase", "./dist"]
 }
