feat(db): add connection pooling

--- a/packages/db/.env.template
+++ b/packages/db/.env.template
@@ -1,5 +1,6 @@
 # Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:54322/postgres"
+DATABASE_URL="postgresql://postgres:postgres@localhost:54322/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres:postgres@localhost:54322/postgres"
 
 # Supabase
 SUPABASE_URL="http://localhost:54321"
