--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "@prisma/client": "5.1.1",
     "prisma": "5.1.1"
+  },
+  "devDependencies": {
+    "typescript": "5.1.3"
   }
 }
