--- a/packages/supabase/package.json
+++ b/packages/supabase/package.json
@@ -16,6 +16,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/node": "^20.8.3"
+    "@types/node": "^20.8.3",
+    "typescript": "5.1.3"
   }
 }
