fix: add missing direct url

--- a/packages/db/.env.test
+++ b/packages/db/.env.test
@@ -1,2 +1,3 @@
 # Database
 DATABASE_URL="postgresql://user:password@localhost:54322/mabar-fun-test"
+DIRECT_URL="postgresql://user:password@localhost:54322/mabar-fun-test"
