fix template db url

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/v6-academy-db-test"
+DATABASE_URL="postgresql://user:password@localhost:5432/postgres"
 
 # JWT
 JWT_SECRET="jwt-secret"
