fix missing direct url in test

--- a/apps/server/.env.test
+++ b/apps/server/.env.test
@@ -1,5 +1,6 @@
 # Database
 DATABASE_URL="postgresql://user:password@localhost:54322/mabar-fun-test"
+DIRECT_URL="postgresql://user:password@localhost:54322/mabar-fun-test"
 
 # JWT
 JWT_SECRET="jwt-secret"
