--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,7 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.33.2",
     "@t3-oss/env-nextjs": "^0.6.1",
-    "@tanstack/react-query": "4.35.3",
+    "@tanstack/react-query": "^5.8.2",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
