--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,7 +20,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@tanstack/react-query": "4.35.3",
+    "@tanstack/react-query": "^5.8.2",
     "@v6/db": "^1.0.0",
     "@v6/dto": "workspace:^",
     "axios": "^1.5.0",
