chore: prep feature flags

--- a/apps/web/.env.template
+++ b/apps/web/.env.template
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_API_URL="http://localhost:2000"
 NEXT_PUBLIC_SUPABASE_URL="http://localhost:54321"
 NEXT_PUBLIC_SUPABASE_KEY="supabase-key"
+
+NEXT_PUBLIC_POSTHOG_KEY="posthog-key"
+NEXT_PUBLIC_POSTHOG_HOST="https://app.posthog.com"
