--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,6 +8,7 @@
     "db:generate": "npx prisma generate",
     "db:push": "npx prisma db push --skip-generate",
     "db:migration": "pnpm prisma migrate dev",
+    "db:deploy": "pnpm prisma migrate deploy",
     "build": "tsc && npx prisma generate"
   },
   "author": "theodevoid",
