--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
+          node-version: '12.x'
       - name: Run App
         uses: appleboy/ssh-action@v0.1.9
         with:
@@ -27,5 +27,5 @@ jobs:
             pnpm install
             pnpm build --filter=db
             pnpm build --filter=server
+            pnpm turbo run db:deploy --filter=db
             pm2 start 0
-        
