--- a/apps/web/.env.template
+++ b/apps/web/.env.template
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_CLIENT_URL="http://localhost:3000"
 NEXT_PUBLIC_API_URL="http://localhost:2000"
 NEXT_PUBLIC_SUPABASE_URL="http://localhost:54321"
 NEXT_PUBLIC_SUPABASE_KEY="supabase-key"
