--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.33.2",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tanstack/react-query": "^5.8.2",
