--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,10 +26,10 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/ssr": "^0.0.10",
-    "@supabase/supabase-js": "^2.33.2",
+    "@supabase/supabase-js": "^2.38.5",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tanstack/react-query": "^5.8.2",
     "@types/node": "20.5.1",
@@ -43,6 +43,7 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cookies-next": "^4.1.0",
     "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
