wip: get registered players realtime

--- a/packages/db/supabase/config.toml
+++ b/packages/db/supabase/config.toml
@@ -37,7 +37,7 @@ default_pool_size = 20
 max_client_conn = 100
 
 [realtime]
-enabled = false
+enabled = true
 # Bind realtime via either IPv4 or IPv6. (default: IPv6)
 # ip_version = "IPv6"
 
