--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.8.2",
     "@v6/db": "^1.0.0",
     "@v6/dto": "workspace:^",
+    "@v6/supabase": "workspace:^",
     "axios": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
